Minor Update Bugfix (warning in terminal about deprecating API)